work on shaders and gravity

--- a/web/minshell.html
+++ b/web/minshell.html
@@ -56,7 +56,7 @@
     </head>
     <body>
         <canvas class=emscripten id=canvas oncontextmenu=event.preventDefault() tabindex=-1></canvas>
-        <p id="output" />
+        <p id="output">
         <script>
             var Module = {
                 print: (function() {
